syntax = "proto3";

option csharp_namespace = "EnrollmentService";

service GrpcStudent {
  rpc GetStudentById (StudentRequest) returns (StudentResponse);
}

message StudentRequest {
  string id = 1;
}

message StudentData {
  string id = 1;
  string studentCode = 2;
  int32 accumulateCredits = 3;
  double accumulateScore = 4;
  int32 accumulateActivityScore = 5;
  string majorId = 6;
  string batchId = 7;
  string applicationUserId = 8;
  UserData user = 9;
}

message UserData {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phoneNumber = 5;
  string personId = 6;
  string imageUrl = 7;
}

message StudentResponse {
  bool success = 1;
  StudentData data = 2;
  repeated string error = 3;
}
